--- a/src/components/RenderMovieCard/RenderMovieCard.module.css
+++ b/src/components/RenderMovieCard/RenderMovieCard.module.css
@@ -1,6 +1,8 @@
 .container {
     padding-top: 5px;
+    padding-bottom: 10px;
     display: flex;
+    border-bottom: 1px solid black;
 }
 
 .button {
@@ -23,4 +25,9 @@
 .descriptionWrapper {
     padding-left: 20px;
     padding-top: 70px;
+}
+
+.AddContainer {
+    border-bottom: 1px solid black;
+    padding-bottom: 20px;
 }
