--- a/src/components/RenderMovieList/RenderMovieList.module.css
+++ b/src/components/RenderMovieList/RenderMovieList.module.css
@@ -1,4 +1,8 @@
-.container {
-    padding-top: 30px;
-    padding-left: 15px;
+.item {
+   font-size: 20px;
 }
+
+.item:not(:last-child) {
+    margin-bottom: 5px;
+}
+
